--- a/web/src/main/webapp/css/AdminModule.css
+++ b/web/src/main/webapp/css/AdminModule.css
@@ -12,8 +12,9 @@
 
 .pageContentBlockFullSize {
     width: 100%;
+
+    position: inherit;
     background-color: #f5f5f5;
-    height: 500px;
     margin-top: 10px;
     border: 2px groove black;
 }
@@ -23,20 +24,20 @@
 }
 
 .pageContentRightBig, .pageContentLeftBig {
+    position: inherit;
     width: 73%;
-    height: 99%;
     padding: 1%;
 }
 
 .pageContentLeftMedium, .pageContentRightMedium {
+    position: inherit;
     width: 48%;
-    height: 99%;
     padding: 1%;
 }
 
 .pageContentRightSmall,.pageContentLeftSmall {
+    position: inherit;
     width: 23%;
-    height: 99%;
     padding: 1%;
 }
 
@@ -56,5 +57,10 @@ form.insertProductForm input[type="text"] {
     width: 50%;
     border: 2px solid #fa8072;
 
+}
+
+.feedback {
+    position: relative !important;
+    display: block;
 }
 
