--- a/web/src/main/webapp/css/AdminModule.css
+++ b/web/src/main/webapp/css/AdminModule.css
@@ -10,10 +10,12 @@
     border: 2px solid red;
 }
 
-.pageContentBlockFullSize {
-    width: 100%;
+.Footer {
+    text-align: center;
+}
 
-    position: inherit;
+.pageContentBlockFullSize {
+    position: relative;
     background-color: #f5f5f5;
     margin-top: 10px;
     border: 2px groove black;
@@ -21,6 +23,10 @@
 
 .clear {
     clear: both;
+}
+
+div {
+    overflow: auto;
 }
 
 .pageContentRightBig, .pageContentLeftBig {
@@ -59,5 +65,27 @@ form.insertProductForm input[type="text"] {
 .feedback {
     position: relative !important;
     display: block;
+}
+
+div.MainMenu {
+    position: relative;
+    overflow: auto;
+}
+
+div.MainMenu table {
+    margin: auto;
+}
+
+div.MainMenu table  td{
+    text-align: center;
+    min-width: 120px;
+    border-radius: 5px;
+    border: 1px ridge black;
+    background-color: #f5deb3;
+}
+
+
+div.MaimMenu .MenuItem {
+    text-align: center;
 }
 
